<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sensor Test Tool</string>
    <string name="selftest">SELF TEST</string>
    <string name="checkerboard_test" translatable="false">CHECKERBOARD TEST</string>
    <string name="image_quality_test" translatable="false">IMAGEQUALITY TEST</string>
    <string name="capacitance_test" translatable="false">CAPACITANCE TEST</string>
    <string name="resetpixel_test" translatable="false">RESET PIXEL TEST</string>
    <string name="afdcalibration_test" translatable="false">AFD CALIBRATION TEST</string>
    <string name="afdcalibrationrubberstamp_test" translatable="false">AFD CALIBRATION RUBBER STAMP TEST</string>
    <string name="afdrubberstamp_test" translatable="false">AFD RUBBER STAMP TEST</string>
    <string name="get_sensor_info" translatable="false">GET SENSOR INFO</string>
    <string name="sensor_information">Sensor Information"</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="error_getting_sensor_info">"Error getting sensor info"</string>
    <string name="error_initializing_sensor">Error initializing sensor: %1$s</string>
    <string name="error_unknown_error">Unknown Error</string>
    <string name="status">Status</string>
    <string name="autorun_output_filename" translatable="false">STTTestResult.xml</string>
    <string name="status_text">Status:</string>
    <string name="status_passed">Passed</string>
    <string name="status_failed">One or more tests failed</string>
    <string name="status_running">Running</string>
    <string name="run">Run</string>
    <string name="cancel">Cancel</string>
    <string name="test_cases">Test Cases</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="select_automatic">Select Automatic</string>
    <string name="select_manual">Select Manual</string>
    <string name="show_log">Show Log</string>
    <string name="select">Select</string>
    <string name="info">Info</string>
    <string name="log">Log</string>
    <string name="calibrating_ground_state" translatable="false">1) Calibrating ground state</string>
    <string name="calibrating_threshold" translatable="false">2) Calibrating threshold</string>
    <string name="abort">Abort</string>
    <string name="abort_message">There are test cases still running, are you sure you want to abort?</string>
    <string name="exit">Confirm</string>
    <string name="exit_message">Are you sure you want to exit application?</string>
    <string name="testcase_name">Name</string>

</resources>
