<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_options"
        android:actionMenuTextColor="@color/white"
        android:icon="@drawable/ic_memory_white"
        android:orderInCategory="0"
        android:title="@string/info"
        android:showAsAction="always" />

    <item
        android:id="@+id/menu_select"
        android:actionMenuTextColor="@color/white"
        android:icon="@drawable/ic_mode_edit_white"
        android:orderInCategory="1"
        android:title="@string/select"
        android:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_select_all"
                android:title="@string/select_all"></item>
            <item
                android:id="@+id/menu_select_none"
                android:title="@string/select_none"></item>
            <item
                android:id="@+id/menu_select_automatic"
                android:title="@string/select_automatic"></item>
            <item
                android:id="@+id/menu_select_manual"
                android:title="@string/select_manual"></item>

        </menu>
    </item>

    <item
        android:id="@+id/menu_show_log"
        android:icon="@drawable/ic_assignment_white"
        android:orderInCategory="2"
        android:title="@string/show_log"
        android:showAsAction="always" />

</menu>
